# intervals-analysis

./: .env.example  .gitignore  README.md  agents.md  fetch_data.py  generate_synthetic_data.py  index.html  process_data.py  pyproject.toml
public/: app.js  index.html  styles.css
public/js/: charts.js  db.js  main.js  map.js  ui.js
scripts/: fetch_data.py  generate_synthetic_data.py  inspect_db.py  inspect_schema.py  process_data.py
tests/: test_fetch_data.py  test_process_data.py  test_spatial.py
